# ppk-project

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
src/: Darwin.cpp  Entity.cpp  Phenotype.cpp  Population.cpp  main.cpp
src/include/: Darwin.h  Entity.h  Phenotype.h  Population.h
